# medibot

./: .gitignore  CRITICAL_FIXES_SUMMARY.md  CRITICAL_FIXES_VERIFICATION.md  ETHERNET_SETUP_GUIDE.md  FIXES_QUICK_REFERENCE.txt  MQTT_BRIDGE_DELIVERABLES.md  PI5_LLM_SETUP.md  README.md
config/: ai_brain.yaml  arm_params.yaml  data_transfer_utils.py  medicine_schedule.yaml  medicines.yaml  monitor_connection.sh  motor_params.yaml  nav2_params.yaml  pi4_network_setup.sh  pi5_network_setup.sh  test_communication.sh  waypoints.yaml
docs/: MQTT_BRIDGE_IMPLEMENTATION.md  WIRING.md
docs/superpowers/specs/: 2026-04-04-pi4-pi5-medical-robot-design.md
scripts/: generate_medicine_images.py  install_pi5_llm.sh  register_patient.sh  tmux_session.sh  ward_tour.py
src/ai_brain/: package.xml  setup.cfg  setup.py
src/ai_brain/ai_brain/: ai_brain_node.py  patient_db_node.py  stt_node.py  tts_node.py
src/arm_controller/: package.xml  setup.py
src/arm_controller/arm_controller/: arm_controller_node.py
src/audio_bridge/: package.xml  setup.py
src/audio_bridge/audio_bridge/: pi4_audio_io_node.py
src/audio_bridge/config/: pi4_audio_config.yaml
src/audio_bridge/launch/: pi4_audio.launch.py
src/behavior_tree/: package.xml  setup.py
src/behavior_tree/behavior_tree/: bt_node.py
src/camera_node/: package.xml  setup.py
src/camera_node/camera_node/: face_camera_node.py  main_camera_node.py
src/compute_manager/: package.xml  setup.cfg  setup.py
src/compute_manager/compute_manager/: compute_manager_node.py
src/doctor_dashboard/: package.xml  setup.cfg  setup.py
src/doctor_dashboard/doctor_dashboard/: api_server.py  dashboard_node.py
src/face_recognition_node/: package.xml  setup.py
src/face_recognition_node/face_recognition_node/: face_detector_node.py  face_tracker_node.py  register_patient.py
src/imu_mpu6050/: package.xml  setup.py
src/imu_mpu6050/imu_mpu6050/: imu_node.py
src/llm_processor/: package.xml  setup.py
src/llm_processor/config/: llm_config.yaml
src/llm_processor/launch/: llm_brain.launch.py
src/llm_processor/llm_processor/: audio_processor_node.py  llm_brain_node.py  speech_synthesizer_node.py
src/medicine_scheduler/: package.xml  setup.cfg  setup.py
src/medicine_scheduler/medicine_scheduler/: display_node.py  scheduler_node.py
src/motor_driver_node/: package.xml  setup.py
src/motor_driver_node/motor_driver_node/: motor_driver.py
src/mqtt_bridge/: package.xml  setup.py  test_critical_fixes.py  test_fixes_simple.py
src/mqtt_bridge/config/: mqtt_bridge.yaml
src/mqtt_bridge/launch/: mqtt_bridge.launch.py
src/mqtt_bridge/mqtt_bridge/: message_converter.py  mqtt_bridge_node.py  mqtt_topics.py
src/mqtt_bridge/resource/: mqtt_bridge
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/config/: medibot.rviz  nav2_params.yaml  slam_toolbox_mapping.yaml
src/robot_bringup/launch/: dashboard.launch.py  gazebo.launch.py  mapping.launch.py  navigation.launch.py  robot_full.launch.py  teleop.launch.py
src/robot_bringup/robot_bringup/: set_waypoint.py  waypoint_navigator.py
src/robot_bringup/urdf/: medibot.urdf
src/robot_bringup/worlds/: hospital_room.world
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: NavigateToBed.action  PatientInteraction.action  PickPlace.action
src/robot_interfaces/msg/: BaseState.msg  ComputeHealth.msg  FaceDetection.msg  FeedbackMotor.msg  FeedbackServo.msg  FeedbackSpeaker.msg  MedicineEvent.msg  MotorPWM.msg  PatientReport.msg
src/robot_interfaces/srv/: QueryMedicine.srv  SetPWMLimits.srv
src/teleop_gamepad/: package.xml  setup.cfg  setup.py
src/teleop_gamepad/teleop_gamepad/: teleop_node.py
