<?xml version="1.0"?>
<package format="3">
  <name>behavior_tree</name>
  <version>0.1.0</version>
  <description>Behavior tree orchestrator for MediBot tasks</description>
  <maintainer email="dev@medibot.local">MediBot Dev</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_interfaces</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
