<?xml version="1.0"?>
<package format="3">
  <name>camera_node</name>
  <version>0.1.0</version>
  <description>Camera driver for MediBot (CSI + USB)</description>
  <maintainer email="dev@medibot.local">MediBot Dev</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
