<?xml version="1.0"?>
<package format="3">
  <name>imu_mpu6050</name>
  <version>0.1.0</version>
  <description>MPU6050 IMU driver for MediBot</description>
  <maintainer email="dev@medibot.local">MediBot Dev</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
