<?xml version="1.0"?>
<package format="3">
  <name>motor_driver_node</name>
  <version>0.1.0</version>
  <description>Differential drive motor controller for MediBot</description>
  <maintainer email="dev@medibot.local">MediBot Dev</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_interfaces</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
