<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mqtt_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 MQTT bridge for Pi4/Pi5 medical robot communication</description>
  <maintainer email="dev@medibot.local">MediBot Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>audio_common_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>robot_interfaces</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
