<?xml version="1.0"?>
<package format="3">
  <name>teleop_gamepad</name>
  <version>0.1.0</version>
  <description>Gamepad teleoperation for MediBot</description>
  <maintainer email="dev@medibot.local">MediBot Dev</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
